# BarTender_bot

./: .gitignore  README.md  pyproject.toml  requirement_libs.db
.xlsx/SetFolder/: Bottles list.xlsx  Bottles list.xlsx.samle
BarPatioT1_bot_ver 0.3/: README.txt  config.py  constans.py  handlers.py  lib.py  loging.py  main.py  menu.py  pyproject.toml  requirement.py  requirement_libs.db  root.py
BarPatioT1_bot_ver 0.3/Files/Libs/: Bottle list.xlsx
BarPatioT1_bot_ver 0.3/logs/: loging.py
BarTender_Bot 0.0.4/: README.md  pyproject.toml
BarTender_Bot 0.0.4/BarTender_bot/: main.py
BarTender_Bot 0.0.4/BarTender_bot/Data Bases/: Users.db
BarTender_Bot 0.0.4/BarTender_bot/Handlers/: Keybort_handler.py  Time_handler.py  User_handler.py
BarTender_Bot 0.0.4/BarTender_bot/Parametrs/: configs.py
BarTender_Bot 0.0.4/Logs/: logs.py
BarTender_bot/: main.py
BarTender_bot/Data Bases/: Bottle list.db  Users.db  requirement_libs.db
BarTender_bot/Handlers/: Keyboard_Handler.py  Keybort_handler.py  Time_handler.py  User_handler.py
BarTender_bot/Libs/: DataConverter_lib.py  Keyboard_lib.py  Keybort_lib.py
BarTender_bot/Parametrs/: .env.sample  configs.py  constans.py
Bartender bot/: main.py
Bartender bot/Parametrs/: configs.py
Logs/: logs.py
